# vision-transformer-finetuning

./: .gitignore  Dockerfile  README.md  check_cuda.py  convert.py  improved_dino_detector.py  install.md  pyproject.toml  requirements.txt  validate_models.py
detr-object-detection/: LICENSE  README.md  architecture_comparison.md  check_dinov3_dims.py  detr_loss.py  detr_model.py  detr_model_meta.py  nested_tensor.py  position_encoding.py  pyproject.toml  requirements.txt  train_detr.py  train_detr_official.py  train_detr_optimized.py  transforms.py  validate_detr.py
dino2-object-detection/: README.md  comprehensive_validation.py  finetune_dino2_simple.py  plot_results.py  validate_models.py  validation_results.json
lora-vit-classification/: README.md
