[project]
name = "detr-dinov3"
version = "0.1.0"
description = "DETR Object Detection with DINOv3 backbone"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Suvarna Kadam", email = "suvarna@witsense.ai"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "datasets>=2.10.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "huggingface-hub>=0.16.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
]